--- a/source/index.html
+++ b/source/index.html
@@ -2,55 +2,41 @@
 layout: default
 ---
 
-<div class='bodycontent'>
-  <div class='bodycontainer'>
-    <div class='hb-form'>
-      <form>
-        <input class='search'  placeholder='How can we help?' required='' type='text'>
-        <input class='searchbutton' type='button' value='Search'>
-      </form>
-    </div>
- 
-    <div class="hb-catagories">
-      <h4> API </h4>
-        <ul class="hb-titles">
-          <li>
-            <a href='pages/about.html'>About Huboard Enterprise API</a>
-          </li>
-        </ul>
-
-      <h4> General </h4>
-        <ul class="hb-titles">
-        <li>
-          <a href='pages/about.html'>Activity dashboard</a>
-        </li>
-        <li>
-          <a href='pages/comand-line utilities.html'>Command-line utilities</a>
-        </li>
-        <li>
-          <a href='pages/site admin dashboard.html'>Site admin dashboard</a>
-        </li>
-        <li>
-          <a href='rebuilding contributions.html'>Rebuilding contributions data</a>
-        </li>
-      </ul>
-
-      <h4> Customization </h4>
-        <ul class="hb-titles">
-        <li>
-          <a href='pages/about.html'>Activity dashboard</a>
-        </li>
-        <li>
-          <a href='pages/comand-line utilities.html'>Command-line utilities</a>
-        </li>
-        <li>
-          <a href='pages/site admin dashboard.html'>Site admin dashboard</a>
-        </li>
-        <li>
-          <a href='rebuilding contributions.html'>Rebuilding contributions data</a>
-        </li>
-      </ul>
-    </div>
-
-  </div>
+<div class="hb-catagories">
+  <h4> API </h4>
+    <ul class="hb-titles">
+      <li>
+        <a href='hb-articles/general/page2.html'>Article Page</a>
+      </li>
+    </ul>
+  <h4> General </h4>
+    <ul class="hb-titles">
+    <li>
+      <a href='pages/about.html'>Activity dashboard</a>
+    </li>
+    <li>
+    <a href=''>Something</a>
+    </li>
+    <li>
+      <a href='hb-articles/general/page2.html'>Something</a>
+    </li>
+    <li>
+      <a href=''>Rebuilding contributions data</a>
+    </li>
+  </ul>
+  <h4> Customization </h4>
+    <ul class="hb-titles">
+    <li>
+      <a href='pages/about.html'>Activity dashboard</a>
+    </li>
+    <li>
+      <a href=''>Command-line utilities</a>
+    </li>
+    <li>
+      <a href=''>Site admin dashboard</a>
+    </li>
+    <li>
+      <a href=''>Rebuilding contributions data</a>
+    </li>
+  </ul>
 </div>
