Added Extended Markdown Filter and breadcrumbs. Created Lorem Ipsum/bob page with markdown.

--- a/source/hb-articles/install/import.html
+++ b/source/hb-articles/install/import.html
@@ -5,7 +5,7 @@ title: Virtual Appliance Import
 
 <h2>{{ page.title }}</h2>
 
-<p> Now that you have downloaded the <a href="{{ site.base }}/hb-articles/install/setup.html"> Huboard Enterprise Application </a>, you must import it in VirtualBox.
+<p> Now that you have downloaded the <a href="{{ site.base }}/hb-articles/install/setup.html"> HuBoard Enterprise Application </a>, you must import it in VirtualBox.
 
 <ol>
   <li>
@@ -13,7 +13,7 @@ title: Virtual Appliance Import
   </li>
   
   <li>
-    <p>Select the Huboard Enterprise OVA with the file-chooser. Then click on Continue.<img src="{{ site.base }}/images/articles/hb-import-02.png"></p>
+    <p>Select the HuBoard Enterprise OVA with the file-chooser. Then click on Continue.<img src="{{ site.base }}/images/articles/hb-import-02.png"></p>
   </li>
 
   <li>
@@ -35,20 +35,13 @@ title: Virtual Appliance Import
   </div>
 
   <li>
-  <p> If you have not come across any errors, you should successfully see Huboard Enterprise VM starting!</p> <img src="{{ site.base}}/images/articles/hb-import-07.png">
+  <p> If you have not come across any errors, you should successfully see HuBoard Enterprise VM starting!</p> <img src="{{ site.base}}/images/articles/hb-import-07.png">
   </li>
   <li>
   <p> Congratulations, HuBoard Enterprise is now started!</p><img src ="{{ site.base }}/images/articles/hb-import-08.png">
   </li>
 </ol>
 
-<p> If you completed all of the steps in this article, then you should now have a working instance of Huboard Enterprise running through the VirtualBox!
+<p> If you completed all of the steps in this article, then you should now have a working instance of HuBoard Enterprise running through the VirtualBox!
 </p>
-
-<div class="hb-reference">
-  <h2> Further Reading </h2>
-
-  <ul class="hb-article-links">
-    <li> <a href="{{ site.base }}/hb-articles/install/config.html">Configure Huboard Enterprise</a>
-  </ul>
 </div>
