--- a/source/hb-articles/install/setup.html
+++ b/source/hb-articles/install/setup.html
@@ -1,16 +1,7 @@
 ---
 layout: articles
-title: Download Huboard Package
+title: Download HuBoard Package
 ---
 
 <h2> {{ page.title }} </h2>
-<p> - To get started, please visit the <a href="https://enterprise.huboard.com/download"> Huboard Enterprise Download Dashboard. </a></p>
-<p><i> I require a Huboard Enterprise login to view the Download Dashboard to be able to create content for this page :)</i></p>
-<div class="hb-reference">
-  <h2> Further Reading</h2>
-  <ul class="hb-article-links">
-    <li>
-    <a href="{{ site.base }}/hb-articles/install/import.html"> Virtual Appliance Import</a>
-    </li>
-  </ul>
-</div>
+<p> - To get started, please visit the <a href="https://enterprise.huboard.com/download"> HuBoard Enterprise Download Dashboard. </a></p>
