--- a/source/index.html
+++ b/source/index.html
@@ -3,40 +3,28 @@ layout: default
 ---
 
 <div class="hb-catagories">
-  <h4> API </h4>
-    <ul class="hb-titles">
+  <h4><a href="hb-articles/install/index.html"> Installation </a></h4>
+    <ul class="hb-article-links">
       <li>
-        <a href='hb-articles/general/page2.html'>Article Page</a>
+        <a href='hb-articles/install/setup.html'> Setup </a>
       </li>
-    </ul>
-  <h4> General </h4>
-    <ul class="hb-titles">
-    <li>
-      <a href='pages/about.html'>Activity dashboard</a>
-    </li>
-    <li>
-    <a href=''>Something</a>
-    </li>
-    <li>
-      <a href='hb-articles/general/page2.html'>Something</a>
-    </li>
-    <li>
-      <a href=''>Rebuilding contributions data</a>
-    </li>
-  </ul>
-  <h4> Customization </h4>
-    <ul class="hb-titles">
-    <li>
-      <a href='pages/about.html'>Activity dashboard</a>
-    </li>
-    <li>
-      <a href=''>Command-line utilities</a>
-    </li>
-    <li>
-      <a href=''>Site admin dashboard</a>
-    </li>
-    <li>
-      <a href=''>Rebuilding contributions data</a>
-    </li>
-  </ul>
+      <li>
+        <a href='hb-articles/install/import.html'> Virtual Appliance Import </a>
+      </li>
+      <li>
+        <a href='hb-articles/install/vm-config.html'> HuBoard Enterprise VM Configuration </a>
+      </li>
+      <li>
+        <a href='hb-articles/install/huboard-config.html'> HuBoard Configuration </a>
+      </li>
+      <li>
+        <a href='hb-articles/install/github-config.html'> Github Configuration </a>
+      </li>
+   </ul>
+   <h4> Ipsum Lorem bob (as per Ryan's request) </h4>
+   <ul class="hb-article-links">
+     <li>
+     <a href="hb-articles/hb-bob/index.html"> bob </a>
+     </li>
+   </ul>
 </div>
