--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@ layout: default
         <a href='hb-articles/install/github-config.html'> Github Configuration </a>
       </li>
    </ul>
-   <h4> Ipsum Lorem bob (as per Ryan's request) </h4>
+   <h4> Ipsum Lorem Example </h4>
    <ul class="hb-article-links">
      <li>
      <a href="hb-articles/hb-bob/index.html"> bob </a>
