--- a/source/index.html
+++ b/source/index.html
@@ -3,25 +3,25 @@ layout: default
 ---
 
 <div class="hb-catagories">
-  <h4><a href="hb-articles/install/index.html"> Installation </a></h4>
+  <h4> Installation </h4>
     <ul class="hb-article-links">
       <li>
-        <a href='hb-articles/install/setup.html'> Setup </a>
+        <a href='hb-articles/setup.html'> HuBoard Enterprise Package </A>
       </li>
       <li>
-        <a href='hb-articles/install/import.html'> Virtual Appliance Import </a>
+        <a href='hb-articles/import.html'> Virtual Appliance Import </a>
       </li>
       <li>
-        <a href='hb-articles/install/vm-config.html'> HuBoard Enterprise VM Configuration </a>
+        <a href='hb-articles/vm-config.html'> HuBoard Enterprise VM Configuration </a>
       </li>
       <li>
-        <a href='hb-articles/install/huboard-config.html'> HuBoard Configuration </a>
+        <a href='hb-articles/huboard-config.html'> HuBoard Configuration </a>
       </li>
       <li>
-        <a href='hb-articles/install/github-config.html'> Github Configuration </a>
+        <a href='hb-articles/github-config.html'> Github Configuration </a>
       </li>
    </ul>
-   <h4> Ipsum Lorem bob (as per Ryan's request) </h4>
+   <h4> Ipsum Lorem bob </h4>
    <ul class="hb-article-links">
      <li>
      <a href="hb-articles/hb-bob/index.html"> bob </a>
